--- a/index.html
+++ b/index.html
@@ -3,62 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrinho - O Pequeno Gigante</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Agrinho - Programa Educacional</title>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#caracteristicas">Características</a></li>
-                <li><a href="#receitas">Receitas</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+        <h1>Agrinho - Programa Educacional</h1>
+        <p>Transformando o meio rural através da educação</p>
     </header>
-    <main>
-        <section id="sobre">
-            <h1>Agrinho - O Pequeno Gigante</h1>
-            <p>O Agrinho é uma variedade de feijão que é muito popular no Brasil. Ele é conhecido por sua pequena tamanho e seu sabor delicioso.</p>
-            <img src="agrinho.jpg" alt="Agrinho" width="200px">
-        </section>
-        <section id="caracteristicas">
-            <h2>Características</h2>
-            <ul>
-                <li>Pequeno tamanho</li>
-                <li>Sabor delicioso</li>
-                <li>Alto teor de proteínas</li>
-                <li>Baixo teor de gordura</li>
-                <li>Rico em fibras</li>
-            </ul>
-        </section>
-        <section id="receitas">
-            <h2>Receitas</h2>
-            <p>O Agrinho é muito versátil e pode ser usado em diversas receitas. Aqui estão algumas sugestões:</p>
-            <ul>
-                <li><a href="receita-feijoada.html">Feijoada</a></li>
-                <li><a href="receita-salada.html">Salada de feijão</a></li>
-                <li><a href="receita-sopa.html">Sopa de feijão</a></li>
-            </ul>
-        </section>
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco para saber mais sobre o Agrinho ou para fazer uma compra.</p>
-            <form>
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome"><br><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br><br>
-                <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem"></textarea><br><br>
-                <input type="submit" value="Enviar">
-            </form>
-        </section>
-    </main>
+    <nav>
+        <a href="#sobre">Sobre o Agrinho</a>
+        <a href="#beneficios">Benefícios</a>
+        <a href="#como-participar">Como Participar</a>
+        <a href="#contato">Contato</a>
+    </nav>
+    <section id="sobre">
+        <h2>Sobre o Agrinho</h2>
+        <p>O Agrinho é um programa educacional desenvolvido para promover a conscientização e a educação no meio rural, abordando temas como sustentabilidade, saúde, alimentação e cidadania.</p>
+    </section>
+    <section id="beneficios">
+        <h2>Benefícios</h2>
+        <ul>
+            <li>Promove o aprendizado sobre práticas sustentáveis</li>
+            <li>Estimula hábitos alimentares saudáveis</li>
+            <li>Desenvolve a consciência ambiental e social</li>
+            <li>Integra a comunidade escolar e rural</li>
+        </ul>
+    </section>
+    <section id="como-participar">
+        <h2>Como Participar</h2>
+        <p>Para participar do Agrinho, escolas e comunidades rurais podem se inscrever através do site oficial ou entrar em contato com os coordenadores locais.</p>
+    </section>
+    <section id="contato">
+        <h2>Contato</h2>
+        <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
+        <p>Email: agrinho@exemplo.com<br>
+        Telefone: (XX) XXXX-XXXX</p>
+    </section>
     <footer>
-        <p>&copy; 2023 Agrinho - O Pequeno Gigante</p>
+        <p>&copy; 2024 Agrinho - Todos os direitos reservados</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
