--- a/index.html
+++ b/index.html
@@ -14,31 +14,57 @@
         <a href="#sobre">Sobre o Agrinho</a>
         <a href="#beneficios">Benefícios</a>
         <a href="#como-participar">Como Participar</a>
+        <a href="#atividades">Atividades</a>
+        <a href="#galeria">Galeria</a>
         <a href="#contato">Contato</a>
     </nav>
-    <section id="sobre">
-        <h2>Sobre o Agrinho</h2>
-        <p>O Agrinho é um programa educacional desenvolvido para promover a conscientização e a educação no meio rural, abordando temas como sustentabilidade, saúde, alimentação e cidadania.</p>
-    </section>
-    <section id="beneficios">
-        <h2>Benefícios</h2>
-        <ul>
-            <li>Promove o aprendizado sobre práticas sustentáveis</li>
-            <li>Estimula hábitos alimentares saudáveis</li>
-            <li>Desenvolve a consciência ambiental e social</li>
-            <li>Integra a comunidade escolar e rural</li>
-        </ul>
-    </section>
-    <section id="como-participar">
-        <h2>Como Participar</h2>
-        <p>Para participar do Agrinho, escolas e comunidades rurais podem se inscrever através do site oficial ou entrar em contato com os coordenadores locais.</p>
-    </section>
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
-        <p>Email: agrinho@exemplo.com<br>
-        Telefone: (XX) XXXX-XXXX</p>
-    </section>
+    <div class="content">
+        <section id="sobre">
+            <h2>Sobre o Agrinho</h2>
+            <p>O Agrinho é um programa educacional promovido pela Federação da Agricultura e Pecuária do Estado (FAEP) em parceria com entidades públicas e privadas, que visa à formação de cidadãos conscientes, críticos e participativos.</p>
+            <p>Desde sua criação em 1995, o Agrinho tem contribuído significativamente para o desenvolvimento sustentável e a qualidade de vida no meio rural, estimulando práticas educativas voltadas para temas como saúde, alimentação, meio ambiente, cidadania e trabalho cooperativo.</p>
+            <p>O programa alcança milhares de escolas e comunidades rurais em todo o estado, promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
+        </section>
+        <section id="beneficios">
+            <h2>Benefícios do Agrinho</h2>
+            <ul>
+                <li>Promove a educação rural de qualidade</li>
+                <li>Estimula práticas sustentáveis e conservação ambiental</li>
+                <li>Incentiva uma alimentação saudável e hábitos de vida conscientes</li>
+                <li>Desenvolve valores de cidadania e responsabilidade social</li>
+                <li>Integra a comunidade escolar e rural em ações educativas e culturais</li>
+            </ul>
+        </section>
+        <section id="como-participar">
+            <h2>Como Participar</h2>
+            <p>Escolas e comunidades interessadas em participar do Agrinho podem se inscrever através do site oficial do programa ou entrando em contato com os coordenadores regionais. O programa oferece materiais pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
+        </section>
+        <section id="atividades">
+            <h2>Atividades do Agrinho</h2>
+            <p>O Agrinho promove diversas atividades educativas, como:</p>
+            <ul>
+                <li>Palestras e workshops sobre temas relevantes para a comunidade rural</li>
+                <li>Visitas técnicas a propriedades rurais e unidades de conservação</li>
+                <li>Hortas escolares e projetos de sustentabilidade ambiental</li>
+                <li>Concursos culturais, como redações e desenhos, sobre temas do programa</li>
+            </ul>
+        </section>
+        <section id="galeria">
+            <h2>Galeria de Fotos</h2>
+            <div class="image-grid">
+                <img src="imagem1.jpg" alt="Foto do Agrinho">
+                <img src="imagem2.jpg" alt="Foto do Agrinho">
+                <img src="imagem3.jpg" alt="Foto do Agrinho">
+                <!-- Adicione mais imagens conforme necessário -->
+            </div>
+        </section>
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
+            <p>Email: agrinho@exemplo.com<br>
+            Telefone: (XX) XXXX-XXXX</p>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2024 Agrinho - Todos os direitos reservados</p>
     </footer>
