--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Agrinho - Programa Educacional</title>
 </head>
+
 <body>
     <header>
         <h1>Agrinho - Programa Educacional</h1>
         <p>Transformando o meio rural através da educação</p>
     </header>
-    <nav> 
+    <nav>
         <ul>
-        <a href="#sobre">Sobre o Agrinho</a>
-        <a href="#beneficios">Benefícios</a>
-        <a href="#como-participar">Como Participar</a>
-        <a href="#atividades">Atividades</a>
-        <a href="#galeria">Galeria</a>
-        <a href="#contato">Contato</a>
-        <ul>
+            <li> <a href="#sobre">Sobre o Agrinho</a></li>
+           <li> <a href="#beneficios">Benefícios</a></li>
+           <li> <a href="#como-participar">Como Participar</a></li>
+           <li> <a href="#atividades">Atividades</a></li>
+            <li> <a href="#galeria">Galeria</a></li>
+            <li> <a href="#contato">Contato</a></li>
+            <li> <ul>
     </nav>
     <div class="content">
         <section id="sobre">
             <h2>Sobre o Agrinho</h2>
-            <p>O Agrinho é um programa educacional promovido pela Federação da Agricultura e Pecuária do Estado (FAEP) em parceria com entidades públicas e privadas, que visa à formação de cidadãos conscientes, críticos e participativos.</p>
-            <p>Desde sua criação em 1995, o Agrinho tem contribuído significativamente para o desenvolvimento sustentável e a qualidade de vida no meio rural, estimulando práticas educativas voltadas para temas como saúde, alimentação, meio ambiente, cidadania e trabalho cooperativo.</p>
-            <p>O programa alcança milhares de escolas e comunidades rurais em todo o estado, promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
+            <p>O Agrinho é um programa educacional promovido pela Federação da Agricultura e Pecuária do Estado (FAEP)
+                em parceria com entidades públicas e privadas, que visa à formação de cidadãos conscientes, críticos e
+                participativos.</p>
+            <p>Desde sua criação em 1995, o Agrinho tem contribuído significativamente para o desenvolvimento
+                sustentável e a qualidade de vida no meio rural, estimulando práticas educativas voltadas para temas
+                como saúde, alimentação, meio ambiente, cidadania e trabalho cooperativo.</p>
+            <p>O programa alcança milhares de escolas e comunidades rurais em todo o estado, promovendo a integração
+                entre educação formal e práticas sustentáveis no campo.</p>
         </section>
         <section id="beneficios">
             <h2>Benefícios do Agrinho</h2>
@@ -40,7 +47,9 @@
         </section>
         <section id="como-participar">
             <h2>Como Participar</h2>
-            <p>Escolas e comunidades interessadas em participar do Agrinho podem se inscrever através do site oficial do programa ou entrando em contato com os coordenadores regionais. O programa oferece materiais pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
+            <p>Escolas e comunidades interessadas em participar do Agrinho podem se inscrever através do site oficial do
+                programa ou entrando em contato com os coordenadores regionais. O programa oferece materiais
+                pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
         </section>
         <section id="atividades">
             <h2>Atividades do Agrinho</h2>
@@ -65,11 +74,12 @@
             <h2>Contato</h2>
             <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
             <p>Email: agrinho@exemplo.com<br>
-            Telefone: (XX) XXXX-XXXX</p>
+                Telefone: (XX) XXXX-XXXX</p>
         </section>
     </div>
     <footer>
         <p>&copy; 2024 Agrinho - Todos os direitos reservados</p>
     </footer>
 </body>
+
 </html>
