--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </header>
     <nav>
         <ul>
-            <li> <a href="#sobre">Sobre o Agrinho</a></li>
-            <li> <a href="#beneficios">Benefícios</a></li>
-            <li> <a href="#como-participar">Como Participar</a></li>
-            <li> <a href="#atividades">Atividades</a></li>
-            <li> <a href="#galeria">Galeria</a></li>
-            <li> <a href="#contato">Contato</a></li>
-            <li>
+             <a href="#sobre">Sobre o Agrinho</a>
+             <a href="#beneficios">Benefícios</a>
+             <a href="#como-participar">Como Participar</a>
+             <a href="#atividades">Atividades</a>
+             <a href="#galeria">Galeria</a>
+             <a href="#contato">Contato</a>
+            
                 <ul>
     </nav>
     <div class="content">
