--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
 
             <button class="bpn">
-                <a href="sobreoagrinho"></a>
+                <a href="sobreoagrinho.html"></a>
             </button>
     </nav>
     <div class="content">
