--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Agrinho - Programa Educacional</title>
 </head>
-
 <body>
     <header>
         <h1>Agrinho - Programa Educacional</h1>
@@ -15,21 +13,15 @@
     </header>
     <nav>
         <ul>
-             <a href="#sobre">Sobre o Agrinho</a>
-             <button class="bpn">
-                <a href="sobreoagrinho.html"></a>
-            </button>
-             <a href="#beneficios">Benefícios</a>
-             <a href="#como-participar">Como Participar</a>
-             <a href="#atividades">Atividades</a>
-             <a href="#galeria">Galeria</a>
-             <a href="#contato">Contato</a>
-            
-                <ul>
-
-            
+            <li><a href="#sobre">Sobre o Agrinho</a></li>
+            <li><a href="#beneficios">Benefícios</a></li>
+            <li><a href="#como-participar">Como Participar</a></li>
+            <li><a href="#atividades">Atividades</a></li>
+            <li><a href="#galeria">Galeria</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
     </nav>
-    <div class="content">
+    <main>
         <section id="sobre">
             <h2>Sobre o Agrinho</h2>
             <p>O Agrinho é um programa educacional promovido pela Federação da Agricultura e Pecuária do Estado (FAEP)
@@ -81,11 +73,4 @@
             <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
             <p>Email: agrinho@exemplo.com<br>
                 Telefone: (XX) XXXX-XXXX</p>
-        </section>
-    </div>
-    <footer>
-        <p>&copy; 2024 Agrinho - Todos os direitos reservados</p>
-    </footer>
-</body>
-
-</html>
+        </section
