--- a/index.html
+++ b/index.html
@@ -1,76 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Agrinho - Programa Educacional</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agrinho</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Agrinho - Programa Educacional</h1>
-        <p>Transformando o meio rural através da educação</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#sobre">Sobre o Agrinho</a></li>
-            <li><a href="#beneficios">Benefícios</a></li>
-            <li><a href="#como-participar">Como Participar</a></li>
-            <li><a href="#atividades">Atividades</a></li>
-            <li><a href="#galeria">Galeria</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section id="sobre">
-            <h2>Sobre o Agrinho</h2>
-            <p>O Agrinho é um programa educacional promovido pela Federação da Agricultura e Pecuária do Estado (FAEP)
-                em parceria com entidades públicas e privadas, que visa à formação de cidadãos conscientes, críticos e
-                participativos.</p>
-            <p>Desde sua criação em 1995, o Agrinho tem contribuído significativamente para o desenvolvimento
-                sustentável e a qualidade de vida no meio rural, estimulando práticas educativas voltadas para temas
-                como saúde, alimentação, meio ambiente, cidadania e trabalho cooperativo.</p>
-            <p>O programa alcança milhares de escolas e comunidades rurais em todo o estado, promovendo a integração
-                entre educação formal e práticas sustentáveis no campo.</p>
-        </section>
-        <section id="beneficios">
-            <h2>Benefícios do Agrinho</h2>
-            <ul>
-                <li>Promove a educação rural de qualidade</li>
-                <li>Estimula práticas sustentáveis e conservação ambiental</li>
-                <li>Incentiva uma alimentação saudável e hábitos de vida conscientes</li>
-                <li>Desenvolve valores de cidadania e responsabilidade social</li>
-                <li>Integra a comunidade escolar e rural em ações educativas e culturais</li>
-            </ul>
-        </section>
-        <section id="como-participar">
-            <h2>Como Participar</h2>
-            <p>Escolas e comunidades interessadas em participar do Agrinho podem se inscrever através do site oficial do
-                programa ou entrando em contato com os coordenadores regionais. O programa oferece materiais
-                pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
-        </section>
-        <section id="atividades">
-            <h2>Atividades do Agrinho</h2>
-            <p>O Agrinho promove diversas atividades educativas, como:</p>
-            <ul>
-                <li>Palestras e workshops sobre temas relevantes para a comunidade rural</li>
-                <li>Visitas técnicas a propriedades rurais e unidades de conservação</li>
-                <li>Hortas escolares e projetos de sustentabilidade ambiental</li>
-                <li>Concursos culturais, como redações e desenhos, sobre temas do programa</li>
-            </ul>
-        </section>
-        <section id="galeria">
-            <h2>Galeria de Fotos</h2>
-            <div class="image-grid">
-                <img src="imagem1.jpg" alt="Foto do Agrinho">
-                <img src="imagem2.jpg" alt="Foto do Agrinho">
-                <img src="imagem3.jpg" alt="Foto do Agrinho">
-                <!-- Adicione mais imagens conforme necessário -->
-            </div>
-        </section>
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Para mais informações sobre o programa Agrinho, entre em contato conosco:</p>
-            <p>Email: agrinho@exemplo.com<br>
-                Telefone: (XX) XXXX-XXXX</p>
-        </section
+  <header>
+    <h1>Agrinho</h1>
+  </header>
+  <main>
+    <section id="farm">
+      <h2>Your Farm</h2>
+      <ul id="farm-list">
+        <!-- farm items will be displayed here -->
+      </ul>
+    </section>
+    <section id="actions">
+      <h2>Actions</h2>
+      <button id="plant-btn">Plant Seed</button>
+      <button id="water-btn">Water Seed</button>
+      <button id="harvest-btn">Harvest Sprout</button>
+    </section>
+    <section id="score">
+      <h2>Score</h2>
+      <p id="score-text">0 points</p>
+    </section>
+  </main>
+  <script src="script.js"></script>
+</body>
+</html>
