--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
+
+<!DOCTYPEhtml>
 <html lang="pt-BR">
-<head>
+<cabeça>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="largura=largura do dispositivo, escala inicial=1,0">
   <title>Agrinho</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <header>
+<corpo>
+  <cabeçalho>
     <h1>Agrinho</h1>
   </header>
-  <main>
-    <section id="farm">
-      <h2>Your Farm</h2>
-      <ul id="farm-list">
-        <!-- farm items will be displayed here -->
+  <principal>
+    <seção id="fazenda">
+      <h2>Sua Fazenda</h2>
+      <ul id="lista-fazenda">
+        <!-- os itens da fazenda serão exibidos aqui -->
       </ul>
-    </section>
-    <section id="actions">
-      <h2>Actions</h2>
-      <button id="plant-btn">Plant Seed</button>
-      <button id="water-btn">Water Seed</button>
-      <button id="harvest-btn">Harvest Sprout</button>
-    </section>
-    <section id="score">
-      <h2>Score</h2>
-      <p id="score-text">0 points</p>
-    </section>
-  </main>
+    </seção>
+    <seção id="ações">
+      <h2>Ações</h2>
+      <button id="plant-btn">Plantar Semente</button>
+      <button id="water-btn">Semente de água</button>
+      <button id="harvest-btn">Colheita de brotos</button>
+    </seção>
+    <seção id="pontuação">
+      <h2>Pontuação</h2>
+      <p id="score-text">0 pontos</p>
+    </seção>
+  </principal>
   <script src="script.js"></script>
 </body>
 </html>
