--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPEhtml>
-    <html lang="pt-BR">
-    <cabeça>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="largura=largura do dispositivo, escala inicial=1,0">
-        <title>Agrinho</title>
-        <link rel="stylesheet" href="style.css">
-        </head>
-        <corpo>
-            <cabeçalho>
-                <h1>Agrinho</h1>
-                <p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e conservação ambiental.</p>
-                <p>Fundado em 1995, o Agrinho já alcançou milhares de escolas e comunidades rurais em todo o estado, promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
-                  <p>O programa é uma parceria entre a Federação da Agricultura e Pecuária do Estado (FAEP) e entidades públicas e privadas, e oferece materiais pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
-  
-                </header>
-                <principal>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="largura=largura do dispositivo, escala inicial=1,0">
+    <title>Agrinho</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Agrinho</h1>
+        <p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e conservação ambiental.</p>
+        <p>Fundado em 1995, o Agrinho já alcançou milhares de escolas e comunidades rurais em todo o estado, promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
+        <p>O programa é uma parceria entre a Federação da Agricultura e Pecuária do Estado (FAEP) e entidades públicas e privadas, e oferece materiais pedagógicos, capacitação de professores e suporte para a realização de atividades educativas.</p>
+    </header>
+    <main>
                     <seção id="fazenda">
                         <h2>Sua Fazenda</h2>
                         <ul id="lista-fazenda">
@@ -23,15 +22,15 @@
                     </seção>
                     <seção id="ações">
                         <h2>Ações</h2>
-                        <button id="plant-btn">Plantar Semente</button>
-                        <button id="water-btn">Semente de água</button>
-                        <button id="harvest-btn">Colheita de brotos</button>
+                        <button id="plant-btn"> <a href="semente.html">Plantar Semente</a></button>
+                        <button id="water-btn"> <a href="">Semente de água </a> </button>
+                        <button id="harvest-btn"> <a href="broto.html"> Colheita de brotos </a> </button>
                     </seção>
                     <seção id="pontuação">
                         <h2>Pontuação</h2>
                         <p id="score-text">0 pontos</p>
                     </seção>
-                </principal>
+                </main>
                 <script src="script.js"></script>
                 </body>
 
