--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <h1>Agrinho</h1>
+            <img src="agrinho logo 2.jpg" alt="logo agrinho">
             <p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e
                 participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e
                 conservação ambiental.</p>
