--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <seção id="ações">
                 <h2>Ações</h2>
                 <button id="plant-btn"> <a href="semente.html">Plantar Semente</a></button>
-                <button id="water-btn"> <a href="">Semente de água </a> </button>
+                <button id="water-btn"> <a href="sementesdeagua.html">Semente de água </a> </button>
                 <button id="harvest-btn"> <a href="broto.html"> Colheita de brotos </a> </button>
             </seção>
             <seção id="pontuação">
