--- a/semente.html
+++ b/semente.html
@@ -8,38 +8,38 @@
 <body>
     <button> <a href="index.html"> voltar </a> </button>
 
-    **Passo 1: Preparar o Solo**
+    Passo 1: Preparar o Solo**
 
-Escolha um local com solo fértil e bem drenado.
+<p>Escolha um local com solo fértil e bem drenado.
  Remova qualquer vegetação ou detritos do solo.
- Adicione um pouco de adubo orgânico para enriquecer o solo.
+ Adicione um pouco de adubo orgânico para enriquecer o solo.</p>
 
 Passo 2: Plantar a Semente**
 
- Abra um buraco pequeno no solo, cerca de 1-2 cm de profundidade.
+ <p>Abra um buraco pequeno no solo, cerca de 1-2 cm de profundidade.
  Coloque a semente do Agrinho no buraco e cubra com um pouco de solo.
- Pressione levemente o solo para fixar a semente no lugar.
+ Pressione levemente o solo para fixar a semente no lugar.</p>
 
 Passo 3: Regar
 
- Regue a semente com água morna e fresca.
-Certifique-se de que o solo esteja sempre úmido, mas não encharcado.
+ <p>Regue a semente com água morna e fresca.
+Certifique-se de que o solo esteja sempre úmido, mas não encharcado.</p>
 
 Passo 4: Cuidar
 
- Mantenha o solo úmido e livre de ervas daninhas.
+ <p>Mantenha o solo úmido e livre de ervas daninhas.
  Forneça luz solar adequada para a planta crescer.
- Adicione adubo orgânico regularmente para nutrir a planta.
+ Adicione adubo orgânico regularmente para nutrir a planta.</p>
 
 Passo 5: Colher
 
- Depois de 3-4 meses, a planta estará pronta para colher.
- Corte a planta perto do solo e seque-a para uso futuro.
+ <p>Depois de 3-4 meses, a planta estará pronta para colher.
+ Corte a planta perto do solo e seque-a para uso futuro.</p>
 
 Dicas
 
- Certifique-se de que a semente esteja fresca e de boa qualidade.
+ <p>Certifique-se de que a semente esteja fresca e de boa qualidade.
  Plante a semente em uma época do ano adequada para o clima local.
- Mantenha a área plantada limpa e organizada para evitar a propagação de doenças e pragas.
+ Mantenha a área plantada limpa e organizada para evitar a propagação de doenças e pragas.</p>
 </body>
 </html>
