--- a/broto.html
+++ b/broto.html
@@ -7,5 +7,27 @@
 </head>
 <body>
     <button> <a href="index.html">voltar</a> </button>
+    O Broto do Agrinho
+
+O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento e o desenvolvimento sustentável. O broto é uma parte fundamental do ciclo de vida de uma planta, e no contexto do Agrinho, ele simboliza a importância da educação rural e da sustentabilidade.
+
+O que representa o irmão do Agrinho?
+
+O broto do Agrinho representa:
+
+Crescimento : Ó mano
+Sustentabilidade : O mano
+Educação : O
+Futuro :
+Como o broto do Agrinho é usado no programa?
+
+O broto do Agrinho é usado de diversas formas no programa, incluindo:
+
+Ilustrações :
+Logotipo :
+Atividades : Ó mano
+Conclusão
+
+O broto do Agrinho é um símbolo importante do Programa Agrinho, que representa o crescimento, a sustentabilidade, a educação e o futuro. Ele é usado de diversas formas no programa para ensinar crianças e jovens sobre a importância da agricultura, do meio ambiente e da sustentabilidade.
 </body>
 </html>
