--- a/index.html
+++ b/index.html
@@ -24,18 +24,25 @@
         <main>
             <seção id="fazenda">
                 <h2>Sua Fazenda</h2>
-                “Sua Fazenda” é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade e conservação ambiental. O projeto é frequentemente utilizado nas escolas brasileiras como uma ferramenta para educar os alunos sobre a importância da agricultura e do meio ambiente.
+                “Sua Fazenda” é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade e
+                conservação ambiental. O projeto é frequentemente utilizado nas escolas brasileiras como uma ferramenta
+                para educar os alunos sobre a importância da agricultura e do meio ambiente.
 
-No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e gerir a sua própria quinta virtual, tomando decisões sobre culturas, pecuária e recursos. O objetivo é ensinar aos alunos os desafios e responsabilidades da agricultura, bem como a importância das práticas sustentáveis.
+                No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e
+                gerir a sua própria quinta virtual, tomando decisões sobre culturas, pecuária e recursos. O objetivo é
+                ensinar aos alunos os desafios e responsabilidades da agricultura, bem como a importância das práticas
+                sustentáveis.
 
-Algumas atividades possíveis em "Sua Fazenda" podem incluir:
+                Algumas atividades possíveis em "Sua Fazenda" podem incluir:
 
-Plantio e
-Aumentando e
-Gerenciando recursos como
-Lidar com desafios ambientais como pragas,
-Tomar decisões sobre práticas sustentáveis ​​e
-Ao participar do “Sua Fazenda”, os alunos podem desenvolver habilidades importantes como pensamento crítico, resolução de problemas e tomada de decisões, além de aprenderem sobre a importância da agricultura e da conservação ambiental.
+                Plantio e
+                Aumentando e
+                Gerenciando recursos como
+                Lidar com desafios ambientais como pragas,
+                Tomar decisões sobre práticas sustentáveis ​​e
+                Ao participar do “Sua Fazenda”, os alunos podem desenvolver habilidades importantes como pensamento
+                crítico, resolução de problemas e tomada de decisões, além de aprenderem sobre a importância da
+                agricultura e da conservação ambiental.
                 <ul id="lista-fazenda">
                     <!-- os itens da fazenda serão exibidos aqui -->
                 </ul>
@@ -46,7 +53,7 @@ Ao participar do “Sua Fazenda”, os alunos podem desenvolver habilidades impo
                 <button id="water-btn"> <a href="sementesdeagua.html">Semente de água </a> </button>
                 <button id="harvest-btn"> <a href="broto.html"> Colheita de brotos </a> </button>
             </seção>
-          
+
         </main>
         <script src="script.js"></script>
     </body>
