--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
         <main>
             <seção id="fazenda">
                 <h2>Sua Fazenda</h2>
-                “Sua Fazenda” é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade e
+                <p>Sua Fazenda é um projeto educacional que visa ensinar aos alunos sobre agricultura, sustentabilidade e
                 conservação ambiental. O projeto é frequentemente utilizado nas escolas brasileiras como uma ferramenta
-                para educar os alunos sobre a importância da agricultura e do meio ambiente.
+                para educar os alunos sobre a importância da agricultura e do meio ambiente.</p>
 
-                No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e
+                <p>No contexto de Agrinho, “Sua Fazenda” pode ser uma simulação ou um jogo onde os alunos podem criar e
                 gerir a sua própria quinta virtual, tomando decisões sobre culturas, pecuária e recursos. O objetivo é
                 ensinar aos alunos os desafios e responsabilidades da agricultura, bem como a importância das práticas
-                sustentáveis.
+                sustentáveis.</p>
 
-                Algumas atividades possíveis em "Sua Fazenda" podem incluir:
+                <p>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</p>
 
-                Plantio e
+               <p> Plantio e
                 Aumentando e
                 Gerenciando recursos como
                 Lidar com desafios ambientais como pragas,
                 Tomar decisões sobre práticas sustentáveis ​​e
                 Ao participar do “Sua Fazenda”, os alunos podem desenvolver habilidades importantes como pensamento
                 crítico, resolução de problemas e tomada de decisões, além de aprenderem sobre a importância da
-                agricultura e da conservação ambiental.
+                agricultura e da conservação ambiental.</p>
                 <ul id="lista-fazenda">
                     <!-- os itens da fazenda serão exibidos aqui -->
                 </ul>
