--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     práticas
                     sustentáveis.</p>
 
-                <p>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</p>
+                <h3>Algumas atividades possíveis em "Sua Fazenda" podem incluir:</h3>
 
                 <p> Plantio e
                     Aumentando e
