--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <header>
             <h1>Agrinho</h1>
             <img src="agrinho logo 2.jpg" alt="logo agrinho">
-            <p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e
+             <i><p>O Agrinho é um programa educacional que visa à formação de cidadãos conscientes, críticos e
                 participativos, promovendo a educação rural de qualidade e estimulando práticas sustentáveis e
-                conservação ambiental.</p>
+                conservação ambiental.</p></i>
             <p>Fundado em 1995, o Agrinho já alcançou milhares de escolas e comunidades rurais em todo o estado,
                 promovendo a integração entre educação formal e práticas sustentáveis no campo.</p>
             <p>O programa é uma parceria entre a Federação da Agricultura e Pecuária do Estado (FAEP) e entidades
