--- a/semente.html
+++ b/semente.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <button> <a href="index.html"> voltar </a> </button>
-
-    Passo 1: Preparar o Solo**
-
+<ul>
+   <li> Passo 1: Preparar o Solo</li>
+</ul>
 <p>Escolha um local com solo fértil e bem drenado.
  Remova qualquer vegetação ou detritos do solo.
  Adicione um pouco de adubo orgânico para enriquecer o solo.</p>
