--- a/sementesdeagua.html
+++ b/sementesdeagua.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button>  <a href="index.html"> voltar</a></button>
-    <br><p>O Programa Agrinho, maior programa de responsabilidade social do Sistema FAEP, tem como objetivo promover a educação rural e a sustentabilidade. Em 2024, o programa lançou a campanha “Agro pela Água: Família Agrinho de mãos dadas com o Meio Ambiente”, com foco na preservação e uso racional da água.</p><br>
+    <p>O Programa Agrinho, maior programa de responsabilidade social do Sistema FAEP, tem como objetivo promover a educação rural e a sustentabilidade. Em 2024, o programa lançou a campanha “Agro pela Água: Família Agrinho de mãos dadas com o Meio Ambiente”, com foco na preservação e uso racional da água.</p>
 
 <p>A campanha visa levar às novas gerações de cidadãos paranaenses uma importante mensagem de preservação e uso racional da água, para que não volte a perder no futuro. Os personagens do Agrinho, Nando e Aninha, são os porta-vozes da campanha.</p>
 
