--- a/broto.html
+++ b/broto.html
@@ -23,10 +23,8 @@
 
 
         <li>
-            <p>O broto do Agrinho representa:</p>
-        <li></li>
-
-    </ul>
+            <p>O broto do Agrinho representa:</p><li>
+        </ul>
     </li>
 
     <ul>
